# onlysq-cloud-drive-linux

./: .gitignore  README.md  pyproject.toml
src/onlysq_drive/: autostart.py  cli.py  clipboard.py  config.py  drive_icon.py  launcher.py  mount.py  paths.py  shell_integration.py  sidebar.py  vpaths.py
